--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app id="WebApp_ID" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-	<display-name>vaadin-addressbook-sample</display-name>
+	<display-name>Vaadin Address Book Sample</display-name>
 	<context-param>
 		<description>
 		Vaadin production mode</description>
@@ -8,19 +8,28 @@
 		<param-value>false</param-value>
 	</context-param>
 	<servlet>
-		<servlet-name>Vaadin Address Book Sample Application</servlet-name>
+		<servlet-name>VaadinAddressBookSampleApplication</servlet-name>
 		<servlet-class>com.vaadin.terminal.gwt.server.ApplicationServlet</servlet-class>
 		<init-param>
-			<description>
-			Vaadin application class to start</description>
+			<description>Vaadin application class to start</description>
 			<param-name>application</param-name>
 			<param-value>com.vobject.vaadin.addressbook.sample.VaadinAddressBookApplication</param-value>
 		</init-param>
 	</servlet>
+<!--	
 	<servlet-mapping>
-		<servlet-name>Vaadin Address Book Sample Application</servlet-name>
+		<servlet-name>VaadinAddressBookSampleApplication</servlet-name>
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
+-->
+	<servlet-mapping>
+		<servlet-name>VaadinAddressBookSampleApplication</servlet-name>
+		<url-pattern>/VaadinAddressBookApplicationServlet/*</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>VaadinAddressBookSampleApplication</servlet-name>
+		<url-pattern>/VAADIN/*</url-pattern>
+	</servlet-mapping>	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
