Replaces MYSQL with HSQLDB to run out of the box.
Without a properly setup MySQL database the app wouldn't run. To keep state you need more than an in-memory store, but for a sample it's best to have it run with a simple command.

--- a/pom.xml
+++ b/pom.xml
@@ -293,7 +293,12 @@
 			<groupId>org.metawidget.modules.vaadin</groupId>
 			<artifactId>metawidget-vaadin</artifactId>
 			<version>2.3-SNAPSHOT</version>
-		</dependency>		
+		</dependency>
+    <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>2.2.8</version>
+    </dependency>
 	</dependencies>
 	<build>
 		<plugins>
